--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,12 @@
 [tox]
-envlist = py35,py36,py37
+envlist = py27,py37
 
 [travis]
 python =
-  3.5: py35
-  3.6: py36
+  2.7: py27
   3.7: py37
 
-[testenv:py35]
-deps = -r{toxinidir}/requirements.txt
-commands = python -m pytest
-
-[testenv:py36]
+[testenv:py27]
 deps = -r{toxinidir}/requirements.txt
 commands = python -m pytest
 
