Update test requirements

--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,9 @@ python =
   3.7: py37
 
 [testenv:py27]
-deps = -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/test-requirements.txt
 commands = python -m pytest
 
 [testenv:py37]
-deps = -r{toxinidir}/requirements.txt
+deps = -r{toxinidir}/test-requirements.txt
 commands = python -m pytest
