--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - sudo add-apt-repository -y ppa:deadsnakes/ppa
   - sudo apt-get update
   - sudo apt-get install -y python$TRAVIS_PYTHON_VERSION-dev
-  - pip install -r requirements.txt
+  - pip install -r test-requirements.txt
   - pip install tox-travis coveralls
 matrix:
   include:
