--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-mnemonic = "==0.13"
+requests = ">=2.22.0,<3"
+six = ">=1.12.0,<2"
 
 [packages]
-btmhdw = {editable = true,path = "."}
+py_equity = {editable = true,path = "."}
 
 [requires]
 python_version = "3.6"
