--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ requests = ">=2.22.0,<3"
 six = ">=1.12.0,<2"
 
 [packages]
-py_equity = {editable = true,path = "."}
+py-equity = {editable = true,path = "."}
 
 [requires]
 python_version = "3.6"
