--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
+os: osx
 language: python
 dist: xenial
 sudo: true
+before_install:
+  - brew tap bytom/bytom && brew install bytom
 install:
   - sudo add-apt-repository -y ppa:deadsnakes/ppa
   - sudo apt-get update
@@ -13,5 +16,9 @@ matrix:
     python: 2.7
   - name: '3.7'
     python: 3.7
-script: tox
+before_script:
+  - bytomd node > /dev/null &
+  - sleep 5
+script:
+  - tox
 after_success: if [ "${TRAVIS_PYTHON_VERSION}" == "3.7" ]; then coveralls; fi;
